Setup order and payment related Repository